frontend/overlays/stage/green/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  template:
    spec:
      containers:
        - name: frontend-container
          image: vikasprince/MERN-Frontend:v1.2.0
