frontend/overlays/stage/green/service-patch.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-green
spec:
  selector:
    app: frontend-green
